awstats (7.3-1) unstable; urgency=high

  * Version bump from upstream.
  * Use new maintainer address.
  * This package is now hosted on github.
  * Use debhelper >= 9 and newest standards version.

 -- Mathias Ertl <mati@fsinf.at>  Sun, 10 Aug 2014 18:54:47 +0200

awstats (7.2-1) unstable; urgency=high

  * New upstream version.
  * Remove 1009_hurd_url.patch patch (applied upstream).

 -- Mathias Ertl <apt-repository@fsinf.at>  Sun, 25 Aug 2013 13:37:42 +0200

awstats (7.0-2) natty; urgency=high

  * move package to git-buildpackage
  * update VCS-fields

 -- Mathias Ertl <apt-repository@fsinf.at>  Sun, 11 Nov 2012 15:12:38 +0100

awstats (7.0-1) maverick; urgency=high

  * This is a new maintainer upload
  * bump from upstream
  * removed patches applied upstream:
    * 0008_nested_includes.patch
    * 0009_CVE-2010-4369.patch
    * 1002_disable_configdir.patch
    * 1008_extrasections_with_top.patch
    * 1015_ignore_case_for_rtsp.patch
    * 1016_report_permissions_problem_for_configs.patch

 -- Mathias Ertl <apt-repository@fsinf.at>  Wed, 05 Jan 2011 20:15:15 +0100

awstats (6.9.5~dfsg-5) unstable; urgency=high

  [ Sergey B Kirpichev ]
  * Bump up Standards-Version to 3.9.1.
  * Remove examples/staticpages.sh.
  * Take sucurity fixes from upstream CVS:
    - CVE-2010-4369: patch 0009 (closes directory traversal vulnerability via
      crafted LoadPlugin directory).
    - CVE-2010-4367(and CVE-2010-4368): update patch 1002 (sanitize configdir,
      disable overwriting of configdir parameter in cgi mode).
    Closes: bug#606263.

  [ Jonas Smedegaard ]
  * Unfuzz patches.
  * Ease building with git-buildpackage:
    + Add dpkg-source local-options.
    + Suppress .pc dir.

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 24 Dec 2010 00:05:07 +0100

awstats (6.9.5~dfsg-4) unstable; urgency=low

  [ Jonas Smedegaard ]
  * Fix bashism in buildstatic.sh.
    Closes: bug#582861.
  * Recommend versions of coreutils supporting mktemp --tmpdir.