@@ -2,3 +2,4 @@
   * Get rid of the last uses of $DIR in main script
   * use own user (e.g., awstats) instead of www-data in cronjobs
   * and then add EnableLockForUpdate=1 as default
+  * add an example index script for #302210 (e.g. "AWStats Totals")
